<resources>
    <string name="app_name">Foreign Travel Guide</string>
    <string name="flag">Flag</string>
    <string name="food">Food</string>
    <string name="title">Foreign Travel Guide</string>
    <string name="countryButton">Countries</string>
    <string name="searchButton">search</string>
    <string name="compareButton">Go</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_sortAZ">sort A-Z</string>
    <string name="action_sortZA">sort Z-A</string>
    <string name="action_highAdvisry">sort High-Low Advisory Level</string>
    <string name="action_lowAdvisry">sort Low-High Advisory Level</string>
    <string name="searchText">Enter Desired Destination</string>
    <string name="compareText1">Enter First Desired Location</string>
    <string name="compareText2">Enter second Desired Location</string>
    <string name="compareMenu">Compare</string>
    <string name="mapfragText">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="latitude">
        <item>33.00</item>
        <item>41.00</item>
        <item>28.00</item>
        <item>-14.20</item>
        <item>42.30</item>
        <item>-12.30</item>
        <item>18.15</item>
        <item>-90.00</item>
        <item>17.03</item>
        <item>-34.00</item>
        <item>40.00</item>
        <item>12.30</item>
        <item>-27.00</item>
        <item>47.20</item>
        <item>40.30</item>
        <item>37.7411</item>
        <item>25.0667</item>
        <item>26.00</item>
        <item>24.00</item>
        <item>13.10</item>
        <item>53.00</item>
        <item>50.50</item>
        <item>17.15</item>
        <item>9.30</item>
        <item>32.20</item>
        <item>27.30</item>
        <item>-17.00</item>
        <item>12.1833</item>
        <item>44.00</item>
        <item>-22.00</item>
        <item>-10.00</item>
        <item>18.30</item>
        <item>4.30</item>
        <item>43.00</item>
        <item>13.00</item>
        <item>22.00</item>
        <item>-3.30</item>
        <item>16.00</item>
        <item>13.00</item>
        <item>6.00</item>
        <item>28.6</item>
        <item>19.30</item>
        <item>7.00</item>
        <item>15.00</item>
        <item>-30.00</item>
        <item>35.00</item>
        <item>4.00</item>
        <item>-12.10</item>
        <item>-21.14</item>
        <item>10.00</item>
        <item>8.00</item>
        <item>45.10</item>
        <item>21.30</item>
        <item>12.1833</item>
        <item>35.00</item>
        <item>49.45</item>
        <item>0.00</item>
        <item>56.00</item>
        <item>11.30</item>
        <item>15.25</item>
        <item>19.00</item>
        <item>-2.00</item>
        <item>27.00</item>
        <item>13.50</item>
        <item>2.00</item>
        <item>15.00</item>
        <item>59.00</item>
        <item>8.00</item>
        <item>-51.45</item>
        <item>-18.00</item>
        <item>64.00</item>
        <item>47.0000</item>
        <item>4.00</item>
        <item>-15.00</item>
        <item>-1.00</item>
        <item>13.4667</item>
        <item>42.00</item>
        <item>51.00</item>
        <item>8.00</item>
        <item>36.08</item>
        <item>39.00</item>
        <item>72.00</item>
        <item>12.07</item>
        <item>16.15</item>
        <item>13.28</item>
        <item>15.30</item>
        <item>11.00</item>
        <item>12.00</item>
        <item>5.00</item>
        <item>19.00</item>
        <item>15.00</item>
        <item>22.15</item>
        <item>47.00</item>
        <item>65.00</item>
        <item>20.00</item>
        <item>-5.00</item>
        <item>32.00</item>
        <item>33.00</item>
        <item>53.00</item>
        <item>31.30</item>
        <item>42.50</item>
        <item>18.15</item>
        <item>36.00</item>
        <item>31.00</item>
        <item>48.00</item>
        <item>1.00</item>
        <item>1.25</item>
        <item>40.0000</item>
        <item>37.5500</item>
        <item>42.35</item>
        <item>-29.30</item>
        <item>41.00</item>
        <item>18.00</item>
        <item>57.00</item>
        <item>33.50</item>
        <item>29.30</item>
        <item>6.30</item>
        <item>25.00</item>
        <item>47.16</item>
        <item>56.00</item>
        <item>49.45</item>
        <item>22.10</item>
        <item>41.6000</item>
        <item>-20.00</item>
        <item>-13.30</item>
        <item>2.30</item>
        <item>3.15</item>
        <item>17.00</item>
        <item>35.50</item>
        <item>9.00</item>
        <item>14.40</item>
        <item>20.00</item>
        <item>-20.17</item>
        <item>-12.50</item>
        <item>23.00</item>
        <item>6.9167</item>
        <item>47.00</item>
        <item>43.44</item>
        <item>46.00</item>
        <item>42.30</item>
        <item>16.45</item>
        <item>32.00</item>
        <item>-18.15</item>
        <item>-22.00</item>
        <item>-0.32</item>
        <item>28.00</item>
        <item>52.30</item>
        <item>-21.30</item>
        <item>-41.00</item>
        <item>13.00</item>
        <item>16.00</item>
        <item>10.00</item>
        <item>-19.02</item>
        <item>17.0000</item>
        <item>62.00</item>
        <item>21.00</item>
        <item>30.00</item>
        <item>7.30</item>
        <item>9.00</item>
        <item>-6.00</item>
        <item>-23.00</item>
        <item>-10.00</item>
        <item>13.00</item>
        <item>52.00</item>
        <item>39.30</item>
        <item>18.15</item>
        <item>25.30</item>
        <item>-1.00</item>
        <item>46.00</item>
        <item>60.00</item>
        <item>-2.00</item>
        <item>17.90</item>
        <item>17.20</item>
        <item>13.53</item>
        <item>18.05</item>
        <item>46.50</item>
        <item>13.15</item>
        <item>-13.35</item>
        <item>43.46</item>
        <item>1.00</item>
        <item>25.00</item>
        <item>14.00</item>
        <item>44.00</item>
        <item>-4.35</item>
        <item>8.30</item>
        <item>1.22</item>
        <item>18.0500</item>
        <item>48.40</item>
        <item>46.07</item>
        <item>-8.00</item>
        <item>10.00</item>
        <item>-29.00</item>
        <item>8.00</item>
        <item>40.00</item>
        <item>7.00</item>
        <item>15.00</item>
        <item>4.00</item>
        <item>-26.30</item>
        <item>62.00</item>
        <item>47.00</item>
        <item>35.00</item>
        <item>23.30</item>
        <item>39.00</item>
        <item>-6.00</item>
        <item>15.00</item>
        <item>-8.50</item>
        <item>8.00</item>
        <item>-9.00</item>
        <item>-20.00</item>
        <item>11.00</item>
        <item>34.00</item>
        <item>39.00</item>
        <item>40.00</item>
        <item>21.45</item>
        <item>-8.00</item>
        <item>1.00</item>
        <item>49.00</item>
        <item>24.00</item>
        <item>54.00</item>
        <item>38.00</item>
        <item>-33.00</item>
        <item>41.00</item>
        <item>-16.00</item>
        <item>8.00</item>
        <item>16.10</item>
        <item>18.20</item>
        <item>15.00</item>
        <item>-15.00</item>
        <item>-20.00</item>
    </string-array>
</resources>